<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16px"
    android:paddingLeft="16px"
    android:paddingRight="16px"
    android:paddingTop="16px"
    tools:context="sdp.project.twitter.Activities.RegisterActivity">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_usernameHint" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/register_emailHint" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/login_passwordHint" />

        <ImageView
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/no_name_user"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/ivUserImage"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/txtflollower"
            android:layout_weight="0"
            android:layout_marginBottom="1dp" />
        <Button
            android:layout_width="195px"
            android:layout_height="60dp"
            android:text="@string/register_registerButton"
            android:id="@+id/buRegister"
            android:background="@drawable/round_background_dark_blue"
            android:layout_marginTop="10dp"
            android:paddingRight="5dp"
            android:textSize="10dp"
            android:textColor="#fdfffa"
            android:onClick ="buRegister"
            />
    </LinearLayout>
</RelativeLayout>
