<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="sdp.project.twitter.Activities.MainActivity">

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layoutDirection="ltr"
        android:gravity="center"
        android:background="#ffffff"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/ChannelInfo"
            android:layoutDirection="rtl"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <ImageView
                android:id="@+id/iv_channel_icon"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:src="@drawable/no_name_user" />
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:paddingTop="1dp">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/main_username"
                        android:id="@+id/txtNameFollowers"
                        android:layout_alignParentTop="true"
                        android:gravity="right"
                        android:textAlignment="gravity"
                        android:background="#94bade"
                        android:layout_toLeftOf="@+id/webView2"
                        android:layout_toRightOf="@+id/buLogin"
                        android:layout_toEndOf="@+id/buLogin"
                        android:paddingBottom="1dp"
                        android:textSize="14dp"
                        android:layout_marginTop="5dp"
                        android:textColor="#ffffff" />

                    <TextView
                        android:id="@+id/txtflollower"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/main_subscribers"
                        android:layout_below="@+id/txtNameFollowers"
                        android:gravity="right"
                        android:textAlignment="gravity"
                        android:layout_alignRight="@+id/txtNameFollowers"
                        android:layout_alignEnd="@+id/txtNameFollowers"
                        android:layout_alignBottom="@+id/buLogin"
                        android:layout_toRightOf="@+id/buLogin"
                        android:layout_toEndOf="@+id/buLogin"
                        android:background="#94bade"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="8dp"
                        android:paddingBottom="5dp"
                        android:textColor="#ffffff" />
                </LinearLayout>

            <Button
                android:id="@+id/buFollow"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20sp"
                android:layout_weight="0"
                android:background="@drawable/press_button_gradient_blue"
                android:onClick="buFollowers"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/main_FollowButton"
                android:textColor="#fdfffa"
                android:textSize="10dp" />

        </LinearLayout>

        <RelativeLayout
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/RV_tweets"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>